--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start:dev": "nodemon src/server.js",
     "start:solution": "docker-compose up --build",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watchAll",
     "test:solution": "docker-compose build && docker-compose run --rm api npm test && docker-compose down"
   },
   "keywords": [],
